--- a/mapbox-react-samples/package.json
+++ b/mapbox-react-samples/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^1.12.8",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2"
